Added the website projects, it just needs more styling. The next thing will be embedding a youtube video to show the 3rd semester project

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <style>
       * {
         margin: 0;
+	      font-size: 24px;
         font-family: 'Poppins', sans-serif;
       }
     </style>
