Attempt to fix breaking scaling issues and it works decent now on 1440p, but I don't have a FHD screen to test it and I think it might be bad

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,15 @@
     <style>
       * {
         margin: 0;
-	      font-size: 24px;
+	      font-size: 18px;
         font-family: 'Poppins', sans-serif;
+      }
+      #root{
+        font-size: 12px;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 100vh 100vh auto;
+        padding-bottom: 20vh;
       }
     </style>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
