more responsiveness changed. Should look decent on most PC screens and zoom levels but mobile is still terrible. I likely won't target that anytime soon

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,23 @@
         grid-template-rows: 100vh 100vh auto;
         padding-bottom: 20vh;
       }
+
+      @media only screen and (max-width: 1600px){
+        *{
+          font-size: 13px;
+        }
+      }
+
+      @media only screen and (max-height: 900px){
+        *{
+          font-size: 13px;
+        }
+      }
+      @media only screen and (max-width: 1200px){
+        *{
+          font-size: 9px;
+        }
+      }
     </style>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Home</title>
